removing database.yml from tracked files, added an example instead

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@
 !/log/.keep
 !/tmp/.keep
 
+# Ignore database config
+/config/database.yml
+
 # Ignore uploaded files in development.
 /storage/*
 !/storage/.keep
