--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # We need to set both the username and password as environment variables in order to use the app
 GITHUB_ANALYZER_USERNAME=postgres
 GITHUB_ANALYZER_PASSWORD=postgres
+
+# Must be set as the webhook secret on your github app
+GITHUB_ANALYZER_WEBHOOK_SECRET=78e59601e29b4db895f86fe6ac4442da9a6b8843
