--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,9 @@ before_install:
   - gem install bundler
 
 before_script:
-  - "./script/travis/setup_database.sh"
+  - psql -c 'create database code_review_metrics_development;' -U postgres
+  - psql -U postgres -q -d code_review_metrics_development -f db/structure.sql
+  - cp -f config/travis/database.yml config/database.yml
 
 script:
   - bundle exec rake db:create
