--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
 before_script:
   - psql -c 'create database code_review_metrics_development;' -U postgres
   - psql -U postgres -q -d code_review_metrics_development -f db/structure.sql
-  - cp -f config/travis/database.yml config/database.yml
+  - cp config/database.yml.travis config/database.yml
 
 script:
   - bundle exec rake db:create
