--- a/.travis.yml
+++ b/.travis.yml
@@ -5,21 +5,27 @@ rvm:
   - 2.6.3
 
 before_install:
-  - sudo apt-get update
-  - sudo apt-get --yes remove postgresql\*
-  - sudo apt-get install -y postgresql-12 postgresql-client-12
-  - sudo cp /etc/postgresql/{9.6,12}/main/pg_hba.conf
-  - sudo service postgresql restart 12
   - gem install bundler
-  - gem install database_yml
+
+
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
+  - cp config/database.yml.travis config/database.yml
 
 script:
-  - database_yml -d postgresql
   - bundle exec rake db:create
   - bundle exec rake db:migrate
   - bundle exec rspec
 
 services:
   - postgresql
+
 addons:
   postgresql: "12.1"
+  apt:
+    packages:
+    - postgresql-12
+    - postgresql-client-12
+env:
+  global:
+  - PGPORT=5433
