--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,26 @@
-sudo: false
 language: ruby
 cache: bundler
 rvm:
   - 2.6.3
 
-before_install:
-  - sudo apt-get update
-  - sudo apt-get --yes remove postgresql\*
-  - sudo apt-get install -y postgresql-12 postgresql-client-12
-  - sudo cp /etc/postgresql/{9.6,12}/main/pg_hba.conf
-  - sudo service postgresql restart 12
-  - gem install bundler
+services:
+  - postgresql
+
+addons:
+  postgresql: 12
+  apt:
+    packages:
+      - postgresql-12
+      - postgresql-client-12
+
+env:
+  - PGPORT=5433
 
 before_script:
-  - psql -c 'create database code_review_metrics_development;' -U postgres
-  - psql -U postgres -q -d code_review_metrics_development -f db/structure.sql
+  - psql -c 'create database code_review_metrics_travis;' -U travis
+  - psql -U travis -q -d code_review_metrics_travis -f db/structure.sql
   - cp config/database.yml.travis config/database.yml
 
 script:
-  - bundle exec rake db:create
   - bundle exec rake db:migrate
   - bundle exec rspec
-
-services:
-  - postgresql
-addons:
-  postgresql: "12.1"
