--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,9 @@ addons:
       - postgresql-client-12
 
 env:
-  - PGPORT=5433
+  global:
+    - PGPORT=5433
+    - CC_TEST_REPORTER_ID=e54f24c60ea55d00f23cba6796704ec633938d432fde7da52a872511496a36b8
 
 before_script:
   - psql -c 'create database code_review_metrics_travis;' -U travis
