--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -56,7 +56,7 @@ Metrics/ModuleLength:
   CountComments: false  # count full line comments?
   Max: 200
 
-Metrics/LineLength:
+Layout/LineLength:
   Max: 100
   # To make it possible to copy or click on URIs in the code, we allow lines
   # containing a URI to be longer than Max.
@@ -64,6 +64,9 @@ Metrics/LineLength:
   URISchemes:
     - http
     - https
+  Exclude:
+    - config/environments/*
+    - config/initializers/*
 
 Metrics/ParameterLists:
   Max: 5
@@ -98,3 +101,6 @@ Style/ModuleFunction:
 
 Style/ReturnNil:
   Enabled: true
+
+Style/BlockComments:
+  Enabled: false
