--- a/config/rails_best_practices.yml
+++ b/config/rails_best_practices.yml
@@ -36,7 +36,11 @@ RemoveUnusedMethodsInModelsCheck: {
     'Events::ReviewComment#find_or_create_review_comment',
     'Events::ReviewComment#created',
     'Events::ReviewComment#edited',
-    'Events::ReviewComment#deleted'
+    'Events::ReviewComment#deleted',
+    'Events::Review#find_or_create_review',
+    'Events::Review#submitted',
+    'Events::Review#edited',
+    'Events::Review#dismissed'
   ]
 }
 ReplaceComplexCreationWithFactoryMethodCheck: { attribute_assignment_count: 2 }
