--- a/config/rails_best_practices.yml
+++ b/config/rails_best_practices.yml
@@ -34,9 +34,12 @@ RemoveUnusedMethodsInModelsCheck: {
     'Events::PullRequest#review_request_removed',
     'Events::PullRequest#find_or_create_pull_request',
     'Events::ReviewComment#find_or_create_review_comment',
-    'Events::ReviewComment#created',
     'Events::ReviewComment#edited',
-    'Events::ReviewComment#deleted'
+    'Events::ReviewComment#deleted',
+    'Events::Review#find_or_create_review',
+    'Events::Review#submitted',
+    'Events::Review#edited',
+    'Events::Review#dismissed'
   ]
 }
 ReplaceComplexCreationWithFactoryMethodCheck: { attribute_assignment_count: 2 }
