Changed organization to @rootstrap/ruby-on-rails

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-@Rootstrap/hdamico @Rootstrap/santiagovidal @Rootstrap/santib @Rootstrap/mrubi-rootstrap @Rootstrap/horacio
+@rootstrap/ruby-on-rails/hdamico @rootstrap/ruby-on-rails/santiagovidal @rootstrap/ruby-on-rails/santib @rootstrap/ruby-on-rails/mrubi-rootstrap @rootstrap/ruby-on-rails/horacio
