--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,6 @@
-* @rootstrap/hdamico @rootstrap/santiagovidal @rootstrap/santib @rootstrap/mrubi-rootstrap @rootstrap/horacio
+# These owners will be the default owners for everything in
+# the repo. Unless a later match takes precedence,
+# @global-owner1 and @global-owner2 will be requested for
+# review when someone opens a pull request.
+
+* @hdamico @santiagovidal @santib @mrubi-rootstrap @horacio
