--- a/config/rails_best_practices.yml
+++ b/config/rails_best_practices.yml
@@ -24,7 +24,12 @@ RemoveEmptyHelpersCheck: { }
 #RemoveTabCheck: { }
 RemoveTrailingWhitespaceCheck: { }
 RemoveUnusedMethodsInControllersCheck: { except_methods: [] }
-RemoveUnusedMethodsInHelpersCheck: { except_methods: [] }
+RemoveUnusedMethodsInHelpersCheck: { except_methods: [
+  'GithubEventPayloadHelper#occurence_time',
+  'GithubEventPayloadHelper#pull_request_ocurrence_time',
+  'GithubEventPayloadHelper#review_comment_ocurrence_time',
+  'GithubEventPayloadHelper#review_ocurrence_time'
+  ] }
 RemoveUnusedMethodsInModelsCheck: { except_methods: [] }
 ReplaceComplexCreationWithFactoryMethodCheck: { attribute_assignment_count: 2 }
 ReplaceInstanceVariableWithLocalVariableCheck: { }
