--- a/config/rails_best_practices.yml
+++ b/config/rails_best_practices.yml
@@ -25,11 +25,9 @@ RemoveEmptyHelpersCheck: { }
 RemoveTrailingWhitespaceCheck: { }
 RemoveUnusedMethodsInControllersCheck: { except_methods: [] }
 RemoveUnusedMethodsInHelpersCheck: { except_methods: [
-  'GithubEventPayloadHelper#occurence_time',
   'GithubEventPayloadHelper#pull_request_ocurrence_time',
   'GithubEventPayloadHelper#review_comment_ocurrence_time',
-  'GithubEventPayloadHelper#review_ocurrence_time',
-  'ProjectBuilder#find_or_create_project'
+  'GithubEventPayloadHelper#review_ocurrence_time'
   ] }
 RemoveUnusedMethodsInModelsCheck: { except_methods: [
     'TimeInterval#includes?',
