--- a/.reek.yml
+++ b/.reek.yml
@@ -18,7 +18,8 @@ detectors:
     min_clump_size: 2
   DuplicateMethodCall:
     enabled: true
-    exclude: ['GithubService#handle_event']
+    exclude: ['GithubService#handle_event',
+              'EventBuilders::Review#assign_attrs']
     max_calls: 1
     allow_calls: []
   FeatureEnvy:
