--- a/config/schedule.yml
+++ b/config/schedule.yml
@@ -1,7 +1,11 @@
-metrics_generator:
-  cron: '*/30 23 * * *'
+review_turnaround_generator:
+  cron: '30 23 * * *'
   class: 'ProcessReviewTurnaroundMetricsJob'
 
 weekly_metrics:
   cron: '50 23 * * 1-5'
   class: 'WeeklyMetricsJob'
+
+review_turnaround_generator:
+  cron: '* 23 * * *'
+  class: 'ProcessMergeTimeMetricsJob'
