--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "github_analyzer",
   "private": true,
   "dependencies": {
-    "@rails/actioncable": "^6.0.0",
-    "@rails/activestorage": "^6.0.0",
+    "@activeadmin/activeadmin": "^2.7.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.2.2",
+    "@rails/webpacker": "5.1.1",
+    "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
+    "chartkick": "^3.2.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.9.0"
+    "webpack-dev-server": "^3.11.0"
   }
 }
