--- a/.reek.yml
+++ b/.reek.yml
@@ -33,7 +33,7 @@ detectors:
     exclude: []
   LongParameterList:
     enabled: true
-    exclude: ['WordpressApiHelper#stub_single_blog_post_response']
+    exclude: ['WordpressApiMocker#stub_single_blog_post_response']
     max_params: 4
     overrides:
       initialize:
