--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "@activeadmin/activeadmin": "^2.7.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.1.1",
+    "@ttskch/select2-bootstrap4-theme": "^1.4.0",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "chartkick": "^3.2.0",
+    "select2": "^4.0.13",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
