--- a/.reek.yml
+++ b/.reek.yml
@@ -34,7 +34,8 @@ detectors:
     exclude: []
   LongParameterList:
     enabled: true
-    exclude: ['WordpressApiMocker#stub_single_blog_post_response']
+    exclude: ['WordpressApiMocker#stub_single_blog_post_response',
+              'BaseMetricService#create_or_update_metric']
     max_params: 4
     overrides:
       initialize:
