--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: ruby
-cache: bundler
+
+cache: 
+  bundler: true
+  directories:
+    - node_modules
+  yarn: true
+
 rvm:
   - 2.6.3
 
@@ -25,6 +31,13 @@ before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
+
+install:
+  - bundle install
+  - nvm install node
+  - node -v
+  - npm i -g yarn
+  - yarn
 
 script:
   - bundle exec rails webpacker:compile
