--- a/config/schedule.yml
+++ b/config/schedule.yml
@@ -32,3 +32,8 @@ blog_metrics_full_update:
   cron: '00 3 1 * *'
   class: 'BlogMetricsFullUpdaterJob'
   active_job: true
+
+code_owners_list:
+  cron: '00 23 * * 1-5'
+  class: 'CodeOwnersListJob'
+  active_job: true
