--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ env:
   global:
     - PGPORT=5433
     - CC_TEST_REPORTER_ID=e54f24c60ea55d00f23cba6796704ec633938d432fde7da52a872511496a36b8
-    - CODE_CLIMATE_API_URL: https://api.codeclimate.com/v1/
+    - CODE_CLIMATE_API_URL: https://api.codeclimate.com/v1
     - CODE_CLIMATE_API_ORG_NAME: rootstrap
 
 before_script:
