--- a/.reek.yml
+++ b/.reek.yml
@@ -35,7 +35,7 @@ detectors:
   LongParameterList:
     enabled: true
     exclude: ['WordpressApiMocker#stub_single_blog_post_response',
-              'BaseMetricService#create_or_update_metric']
+              'Metrics::Base#create_or_update_metric']
     max_params: 4
     overrides:
       initialize:
