adds node, yarn and redis to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ rvm:
 
 services:
   - postgresql
+  - redis-server
 
 addons:
   postgresql: 12
@@ -22,6 +23,10 @@ env:
     - CODE_CLIMATE_API_URL: https://api.codeclimate.com/v1
     - CODE_CLIMATE_API_ORG_NAME: rootstrap
 
+install:
+  - nvm 12.16.1
+  - npm install -g yarn
+
 before_script:
   - psql -c 'create database code_review_metrics_travis;' -U travis
   - psql -U travis -q -d code_review_metrics_travis -f db/structure.sql
@@ -31,6 +36,7 @@ before_script:
   - ./cc-test-reporter before-build
 
 script:
+  - bundle exec rails webpacker:compile
   - bundle exec rspec
   - bundle exec rake code_analysis
 
