--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,17 @@
 language: ruby
 
-cache: bundler
+cache:
+  bundler: true
+  directories:
+    - node_modules
+  yarn: true
 
 rvm:
   - 2.6.3
 
 services:
   - postgresql
+  - redis-server
 
 addons:
   postgresql: 12
@@ -22,6 +27,13 @@ env:
     - CODE_CLIMATE_API_URL: https://api.codeclimate.com/v1
     - CODE_CLIMATE_API_ORG_NAME: rootstrap
 
+install:
+  - bundle install
+  - nvm install node
+  - node -v
+  - npm i -g yarn
+  - yarn
+
 before_script:
   - psql -c 'create database code_review_metrics_travis;' -U travis
   - psql -U travis -q -d code_review_metrics_travis -f db/structure.sql
@@ -31,6 +43,7 @@ before_script:
   - ./cc-test-reporter before-build
 
 script:
+  - bundle exec rails webpacker:compile
   - bundle exec rspec
   - bundle exec rake code_analysis
 
