--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ GITHUB_ANALYZER_PASSWORD=postgres
 
 # Must be set as the webhook secret on your github app
 GITHUB_ANALYZER_WEBHOOK_SECRET=fake-secret
+
+# must be set to expect the ok process for code owners file job
+GITHUB_ADMIN_USER = github_username
+GITHUB_ADMIN_TOKEN = personal_access_token
