Add CodeClimate ENV vars

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,10 @@ GITHUB_ANALYZER_PASSWORD=postgres
 
 # Must be set as the webhook secret on your github app
 GITHUB_ANALYZER_WEBHOOK_SECRET=fake-secret
+
+# Token obtained from https://codeclimate.com/profile/tokens
+CODE_CLIMATE_API_TOKEN:
+# Url obtained from https://developer.codeclimate.com/#overview
+CODE_CLIMATE_API_URL: https://api.codeclimate.com/v1
+# This constant is prepended to all repository slugs in the requests to CodeClimate API
+CODE_CLIMATE_API_ORG_NAME: rootstrap
