Fix env vars assignment

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ GITHUB_ANALYZER_PASSWORD=postgres
 GITHUB_ANALYZER_WEBHOOK_SECRET=fake-secret
 
 # Token obtained from https://codeclimate.com/profile/tokens
-CODE_CLIMATE_API_TOKEN:
+CODE_CLIMATE_API_TOKEN=
 # Url obtained from https://developer.codeclimate.com/#overview
-CODE_CLIMATE_API_URL: https://api.codeclimate.com/v1
+CODE_CLIMATE_API_URL=https://api.codeclimate.com/v1
 # This constant is prepended to all repository slugs in the requests to CodeClimate API
-CODE_CLIMATE_API_ORG_NAME: rootstrap
+CODE_CLIMATE_API_ORG_NAME=rootstrap
