Per language metrics (#238)
* WIP

* Per Language implemented

* Per Language tests

* Fix

* Fix

* Minor fix

* Fix

* Fix

* Fix

* Code climate fixes

* Code climate

* Fixes

* Requested changes

* Rake for the creation of default languages and departments

* Code analysis

* Fixtures added

* Null false on language name

--- a/spec/fixtures/departments.yml
+++ b/spec/fixtures/departments.yml
@@ -12,8 +12,12 @@
 #  index_departments_on_name  (name)
 #
 
-FactoryBot.define do
-  factory :department do
-    sequence(:name) { |n| %i[backend frontend mobile][n % 3] }
-  end
-end
+backend:
+  id: 1
+  name: 'backend'
+frontend:
+  id: 2
+  name: 'frontend'
+mobile:
+  id: 3
+  name: 'mobile'
