--- a/config/rails_best_practices.yml
+++ b/config/rails_best_practices.yml
@@ -31,6 +31,7 @@ RemoveUnusedMethodsInHelpersCheck: { except_methods: [
   ] }
 RemoveUnusedMethodsInModelsCheck: { except_methods: [
     'TimeInterval#includes?',
+    'ReviewTurnaround#build'
   ] }
 ReplaceComplexCreationWithFactoryMethodCheck: { attribute_assignment_count: 2 }
 ReplaceInstanceVariableWithLocalVariableCheck: { }
