--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -46,7 +46,9 @@ Metrics/ClassLength:
 
 # Avoid complex methods.
 Metrics/CyclomaticComplexity:
-  Max: 7
+  Max: 6
+  Exclude:
+    - app/services/builders/chartkick/base.rb
 
 Metrics/MethodLength:
   CountComments: false  # count full line comments?
