--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -73,6 +73,8 @@ Layout/LineLength:
 Metrics/ParameterLists:
   Max: 5
   CountKeywordArgs: true
+  Exclude:
+    - app/services/code_climate/project_summary.rb
 
 Metrics/PerceivedComplexity:
   Max: 12
