adds eslint to js files and fixes offenses, adds eslint script to travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ install:
   - node -v
   - npm i -g yarn
   - yarn
+  - yarn run lint
 
 before_script:
   - psql -c 'create database code_review_metrics_travis;' -U travis
