--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -3,4 +3,4 @@
 # @global-owner1 and @global-owner2 will be requested for
 # review when someone opens a pull request.
 
-* @hdamico @santiagovidal @santib @horacio @hvilloria
+* @rootstrap/reviewers-rs-code-review-metrics
