--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -77,6 +77,9 @@ Metrics/ParameterLists:
 Metrics/PerceivedComplexity:
   Max: 12
 
+Naming/RescuedExceptionsVariableName:
+  PreferredName: exception
+
 Rails:
   Enabled: true
 
