--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -32,6 +32,8 @@ Metrics/AbcSize:
   # The ABC size is a calculated magnitude, so this number can be an Integer or
   # a Float.
   Max: 15
+  Exclude:
+    - app/services/builders/distribution/pull_requests.rb
 
 Metrics/BlockLength:
   CountComments: false  # count full line comments?
@@ -53,6 +55,7 @@ Metrics/CyclomaticComplexity:
   Max: 6
   Exclude:
     - app/services/builders/chartkick/base.rb
+    - app/services/builders/distribution/pull_requests.rb
 
 Metrics/MethodLength:
   CountComments: false  # count full line comments?
