--- a/.reek.yml
+++ b/.reek.yml
@@ -35,7 +35,8 @@ detectors:
   LongParameterList:
     enabled: true
     exclude: ['WordpressApiMocker#stub_single_blog_post_response',
-              'Metrics::Base#create_or_update_metric']
+              'Metrics::Base#create_or_update_metric',
+              'CodeClimate::ProjectSummary']
     max_params: 4
     overrides:
       initialize:
