Add GithubClient::PullRequest#get method

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,23 @@ GITHUB_ANALYZER_PASSWORD=postgres
 # Must be set as the webhook secret on your github app
 GITHUB_ANALYZER_WEBHOOK_SECRET=fake-secret
 
+# Own Github organization
+GITHUB_ORGANIZATION=rootstrap
+
+# Worpress data
+WORDPRESS_SITE_ID=
+WORDPRESS_CLIENT_ID=
+WORDPRESS_CLIENT_SECRET=
+WORDPRESS_USERNAME=
+WORDPRESS_PASSWORD=
+
 # Token obtained from https://codeclimate.com/profile/tokens
 CODE_CLIMATE_API_TOKEN=
 # Url obtained from https://developer.codeclimate.com/#overview
 CODE_CLIMATE_API_URL=https://api.codeclimate.com/v1
 # This constant is prepended to all repository slugs in the requests to CodeClimate API
 CODE_CLIMATE_API_ORG_NAME=rootstrap
+
+# Github credentials
+GITHUB_ADMIN_USER=
+GITHUB_ADMIN_TOKEN=
