--- a/config/schedule.yml
+++ b/config/schedule.yml
@@ -57,3 +57,8 @@ external_contributions_processor:
   cron: '00 5 * * 1-5'
   class: 'ExternalContributionsProcessorJob'
   active_job: true
+
+external_contributions_processor:
+  cron: '0 0 * * 0'
+  class: 'OrgUsersUpdaterJob'
+  active_job: true
