Added timestamps when user enters and leaves org

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -115,3 +115,7 @@ Style/ReturnNil:
 
 Style/BlockComments:
   Enabled: false
+
+SkipsModelValidations:
+  Exclude:
+    - app/services/processors/org_users_updater.rb
