--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,6 @@ CODE_CLIMATE_API_ORG_NAME=rootstrap
 # Github credentials
 GITHUB_ADMIN_USER=
 GITHUB_ADMIN_TOKEN=
+
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/abc
+ENGINEERING_METRICS_URL=https://example.com
