Add testing for defect escape data classes, summary view, env sample

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,9 @@ GITHUB_ADMIN_TOKEN=
 
 SLACK_WEBHOOK_URL=https://hooks.slack.com/services/abc
 ENGINEERING_METRICS_URL=https://example.com
+
+# Jira
+JIRA_ADMIN_USER=
+JIRA_ADMIN_PASSWORD=
+JIRA_ENVIRONMENT_FIELD=
+JIRA_ROOT_URL=
