fix code_analysis issues

--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,7 @@ SLACK_WEBHOOK_URL=https://hooks.slack.com/services/abc
 ENGINEERING_METRICS_URL=https://example.com
 
 # Jira
-JIRA_ADMIN_USER=
-JIRA_ADMIN_PASSWORD=
-JIRA_ENVIRONMENT_FIELD=
-JIRA_ROOT_URL=
+JIRA_ADMIN_USER=admin
+JIRA_ADMIN_PASSWORD=admin
+JIRA_ENVIRONMENT_FIELD=customfield_10000
+JIRA_ROOT_URL=http://localhost:2990
