--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -67,6 +67,7 @@ Layout/LineLength:
   # To make it possible to copy or click on URIs in the code, we allow lines
   # containing a URI to be longer than Max.
   AllowURI: true
+  IgnoredPatterns: ['stub_request']
   URISchemes:
     - http
     - https
