See a project's Defect Escape Rate for a given time period (#416)
* schedule jira updater job

* add models for jira_project and jira_issue

* add jira_client and repository

* add refactor to jira issue and jira project model

* add persistance and request to api

* add call from views

* use period instead of from-to to build the metrics

* Add enum items to jira issues and metrics

* Add defect escape rate views

* Fix tests and delete unnecessary files

* Add testing for defect escape data classes, summary view, env sample

* fix code_analysis issues

* fix bug that excluded last day of interval and changed parsing of the response from jira

* Add testing to defect_escape_rate/per_project

* Add testing to jira_project_escape_rate_updater

* Jira project update/creation on Admin (#417)

* Add value to admin views show, index and edit. Edit not implemented yet

* add jira project creation on admin

Co-authored-by: lalopsb <carlosjavierperezdev@gmail.com>

* Fixes after comments

Co-authored-by: lalopsb <carlosjavierperezdev@gmail.com>
Co-authored-by: Matteo Guerrieri <matteo.guerrieri@rootstrap.com>

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,9 @@ GITHUB_ADMIN_TOKEN=
 
 SLACK_WEBHOOK_URL=https://hooks.slack.com/services/abc
 ENGINEERING_METRICS_URL=https://example.com
+
+# Jira
+JIRA_ADMIN_USER=admin
+JIRA_ADMIN_PASSWORD=admin
+JIRA_ENVIRONMENT_FIELD=customfield_10000
+JIRA_ROOT_URL=http://localhost:2990
