Rename env variable JIRA_ADMIN_PASSWORD to JIRA_ADMIN_TOKEN as auth of jira has changed

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,6 @@ ENGINEERING_METRICS_URL=https://example.com
 
 # Jira
 JIRA_ADMIN_USER=admin
-JIRA_ADMIN_PASSWORD=admin
+JIRA_ADMIN_TOKEN=admin
 JIRA_ENVIRONMENT_FIELD=customfield_10000
 JIRA_ROOT_URL=http://localhost:2990
