--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "chartkick": "^3.2.0",
+    "popper.js": "^1.16.1",
     "select2": "^4.0.13",
     "turbolinks": "^5.2.0"
   },
