Fix github validation on pull request create

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -98,6 +98,8 @@ Rails/FilePath:
 
 Rails/SaveBang:
   Enabled: true
+  Exclude:
+    - app/services/builders/events/pull_request.rb
 
 Style/BlockDelimiters:
   EnforcedStyle: braces_for_chaining
