--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,5 @@ JIRA_ADMIN_USER=admin
 JIRA_ADMIN_TOKEN=admin
 JIRA_ENVIRONMENT_FIELD=customfield_10000
 JIRA_ROOT_URL=http://localhost:2990
+JIRA_AGILE_URL=http://localhost:2990
+JIRA_REPORTS_URL=http://localhost:2990
