--- a/config/schedule.yml
+++ b/config/schedule.yml
@@ -48,9 +48,9 @@ organization_members_updater:
   class: 'OrgUsersUpdaterJob'
   active_job: true
 
-projects_update:
+repositories_update:
   cron: '30 5 * * 6'
-  class: 'ProjectsImporterJob'
+  class: 'RepositoriesImporterJob'
   active_job: true
 
 send_open_source_notification:
