--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,8 @@ JIRA_REPORTS_URL=http://localhost:2990
 
 # Quichckart
 QUICKCHART_URL=https://quickchart.io/chart/create
+
+# SendGrid credentials
+SENDGRID_USERNAME=metrics@example.com
+SENDGRID_PASSWORD=
+SENDGRID_API_KEY=
