--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -81,6 +81,8 @@ jobs:
       PGPASSWORD: postgres
       RAILS_ENV: test
       JIRA_ENVIRONMENT_FIELD: customfield_10000
+      SENDGRID_USERNAME: metrics@example.com
+      ENGINEERING_METRICS_URL: http://engineering-metrics.com/
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
