change sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,10 @@
 #----- Project Configuration
-sonar.sources=src
+sonar.sources=src/app
 sonar.projectBaseDir=.
 sonar.projectVersion=1.0.0
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.tests=src/app
+sonar.exclusions=**/node_modules/**,**/*.spec.ts
 sonar.test.inclusions=**/*.spec.ts
 sonar.verbose=false
 sonar.qualitygate.wait=true
