change sonar properties

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -148,3 +148,11 @@ jobs:
             -Dsonar.host.url=$SONAR_URL \
             -Dsonar.login=$SONAR_TOKEN \
             -Dsonar.projectKey=$SONAR_PROJECT_KEY \
+            -Dsonar.qualitygate.wait=true \
+            -Dsonar.scm.provider=git \
+            -Dsonar.java.binaries=/tmp \
+            -Dsonar.nodejs.executable=$(which node) \
+            -Dsonar.projectVersion=$(echo $GITHUB_SHA | cut -c1-8) \
+            -Dsonar.sources=. \
+            -Dsonar.projectBaseDir=. \
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
