--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.sources=src
 sonar.projectBaseDir=.
 sonar.projectVersion=1.0.0
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
-sonar.exclusions=**/node_modules/**,**/*.spec.ts,./vendor
+sonar.exclusions=**/node_modules/**,**/*.spec.ts,**/vendor
 sonar.test.inclusions=**/*.spec.ts
 sonar.verbose=false
 sonar.qualitygate.wait=true
