--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,5 @@
-#----- Project Configuration
-sonar.sources=src
-sonar.projectBaseDir=.
 sonar.projectVersion=1.0.0
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
-sonar.exclusions=**/node_modules/**,**/*.spec.ts,**/vendor
-sonar.test.inclusions=**/*.spec.ts
-sonar.verbose=false
-sonar.qualitygate.wait=true
-sonar.scm.provider=git
-sonar.java.binaries=/tmp
+sonar.projectVersion=1.0-SNAPSHOT
+sonar.sources=app, config, db, lib
+sonar.exclusions=app/assets/**/*
+sonar.ruby.coverage.reportPaths=coverage/.resultset.json
