--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,3 +3,4 @@ sonar.projectVersion=1.0-SNAPSHOT
 sonar.sources=app, config, db, lib
 sonar.exclusions=app/assets/**/*
 sonar.ruby.coverage.reportPaths=coverage/.resultset.json
+sonar.qualitygate.wait=true
