--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.1.1",
     "@ttskch/select2-bootstrap4-theme": "^1.4.0",
+    "activeadmin_addons": "^1.0.0",
     "bootstrap": "^5.1",
     "chart.js": "^2.9.3",
     "chartkick": "^3.2.0",
