Sync master with develop (#551)
* updates

* delete puma

* change pr size metric definition

* change review turnaround metric definition

* add Sonar

* add sonar properties

* add sonar properties

* change sonar properties

* change sonar properties

* change sonar properties

* change sonar properties

* change sonar properties

* sonar.exclusions

* sonar.exclusions

* sonar.exclusions

* sonar.exclusions

* fix sonarQube bugs

* Sort projects and repositories by name in the navigation sidebar

* updates

* delete puma

* rebase against develop branch.

* Revert "updates"

This reverts commit 972877cb

* fixed rubocop version to 0.79.0

* Bump rack from 2.2.3 to 2.2.4

Bumps [rack](https://github.com/rack/rack) from 2.2.3 to 2.2.4.
- [Release notes](https://github.com/rack/rack/releases)
- [Changelog](https://github.com/rack/rack/blob/main/CHANGELOG.md)
- [Commits](https://github.com/rack/rack/compare/2.2.3...2.2.4)

---
updated-dependencies:
- dependency-name: rack
  dependency-type: indirect
...

Signed-off-by: dependabot[bot] <support@github.com>

* added black font to success rate style

* create temporary partial view with disabled project dashboard
add no repositories disclaimer condidional in _general.erb and and _general2.erb

* comment failing tests that are used for the previously generated partial

* add rubocop exception to .rubocop.yml for development_metrics_controller.rb

* Bump nokogiri from 1.12.5 to 1.13.9

Bumps [nokogiri](https://github.com/sparklemotion/nokogiri) from 1.12.5 to 1.13.9.
- [Release notes](https://github.com/sparklemotion/nokogiri/releases)
- [Changelog](https://github.com/sparklemotion/nokogiri/blob/main/CHANGELOG.md)
- [Commits](https://github.com/sparklemotion/nokogiri/compare/v1.12.5...v1.13.9)

---
updated-dependencies:
- dependency-name: nokogiri
  dependency-type: indirect
...

Signed-off-by: dependabot[bot] <support@github.com>

* B

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -83,6 +83,9 @@ jobs:
       JIRA_ENVIRONMENT_FIELD: customfield_10000
       SENDGRID_USERNAME: metrics@example.com
       ENGINEERING_METRICS_URL: http://engineering-metrics.com/
+      SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+      SONAR_URL: ${{ secrets.SONAR_URL }}
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -137,3 +140,14 @@ jobs:
       - name: Report to CodeClimate
         run: |
           ./cc-test-reporter after-build --exit-code 0
+      - name: Setup sonar scanner
+        uses: warchant/setup-sonar-scanner@v3
+      - name: Run Sonarqube analysis
+        run: |
+          sonar-scanner \
+            -Dsonar.host.url=$SONAR_URL \
+            -Dsonar.login=$SONAR_TOKEN \
+            -Dsonar.projectKey=$SONAR_PROJECT_KEY \
+            -Dsonar.nodejs.executable=$(which node) \
+            -Dsonar.projectVersion=$(echo $GITHUB_SHA | cut -c1-8) \
+            -Dsonar.qualitygate.wait=true \
