--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,8 @@
 require: rubocop-rails
 
 AllCops:
+  TargetRubyVersion: 3.0
+  NewCops: enable
   Exclude:
     - db/schema.rb
     - 'node_modules/**/*'
