--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,9 @@ WORDPRESS_SITE_ID=
 WORDPRESS_CLIENT_ID=
 WORDPRESS_CLIENT_SECRET=
 WORDPRESS_USERNAME=
-WORDPRESS_PASSWORD=
+WORDPRESS_PASSWORD=''
+
+HONEYBADGER_API_KEY=''
 
 # Token obtained from https://codeclimate.com/profile/tokens
 CODE_CLIMATE_API_TOKEN=
