--- a/.reek.yml
+++ b/.reek.yml
@@ -57,7 +57,6 @@ detectors:
     enabled: true
     exclude: []
     max_allowed_nesting: 2
-    ignore_iterators: []
   NilCheck:
     enabled: false
     exclude: []
@@ -129,3 +128,4 @@ detectors:
 
 exclude_paths:
   - config
+  - app/models/concerns/ransackable.rb
